[package]
name = "keylayout_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { version = "1.0.0-alpha.4", features = ["extension", "label", "memoization"] }
clap = { version = "4.3.21", features = ["derive", "wrap_help"] }
clap_complete = "4.3.2"
color-eyre = "0.6.2"
debug3 = "0.3.0"
indexmap = { version = "2.0.0", features = ["serde"] }
itertools = "0.11.0"
locspan = { version = "0.7.13", features = ["reporting"] }
miette = { version = "5.10.0", features = ["fancy"] }
ngrammatic = "0.4.0"
once_cell = "1.18.0"
pad = "0.1.6"
patharg = "0.3.0"
pretty = { version = "0.12.1", features = ["termcolor"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
snailquote = "0.3.1"
thiserror = "1.0.44"
